--- a/app/Models/templates/monitor.html
+++ b/app/Models/templates/monitor.html
@@ -48,45 +48,6 @@
     					</div>
   					</div>
 				</div>
-
-				<!-- Template -->
-				<div class="container">
-  					<div class="row">
-    					<div class="col">
-      						<p class="h2">25</p>
-    					</div>
-    					
-    					<div class="col">
-      						<p class="h2">1</p>
-    					</div>
-  					</div>
-				</div>
-
-				<!-- Template -->
-				<div class="container">
-  					<div class="row">
-    					<div class="col">
-      						<p class="h2">26</p>
-    					</div>
-    					
-    					<div class="col">
-      						<p class="h2">2</p>
-    					</div>
-  					</div>
-				</div>
-
-				<div class="container">
-  					<div class="row">
-    					<div class="col">
-      						<p class="h2">5</p>
-    					</div>
-    					
-    					<div class="col">
-      						<p class="h2">3</p>
-    					</div>
-  					</div>
-				</div>
-
 			</div>
 		</div>
 	</div>
@@ -100,13 +61,13 @@
 			url: "{{ url_for('getCustomers') }}",
 			data: {"get": 1},
 			success: function(response) {
+
 				$("#customers").empty()
 
-				for (let i in response.data) {
-					i++;
+				for (let i = 0; i < response.data.length; i++) {
 					$("#customers").append(
 						$("<p/>")
-							.text(i)
+							.text(response.data[i])
 							.addClass("h1")
 					);
 				}
@@ -114,7 +75,55 @@
 		})
 	}
 
-	setInterval(getCustomers, 5 * Math.pow(10, 3));
+	function getWorkplaces() {
+		$.ajax({
+			type: "POST",
+			url: "{{ url_for('getWorkplaces') }}",
+			data: {"get": 1},
+			success: function(response) {
+				$("#operators_queue").empty();
+				$("#operators_queue").append(
+					`
+					<div class="container text-center">
+  						<div class="row">
+    						<div class="col">
+      							<p class="h3">Customer</p>
+    						</div>
+    					
+    						<div class="col">
+      							<p class="h3">Operator</p>
+    						</div>
+  						</div>
+					</div>
+					`
+				);
+
+				let keys = Object.keys(response);
+				for (let i = 0; i < keys.length; i++) {
+					$("#operators_queue").append(
+					`
+					<div class="container text-center">
+  						<div class="row">
+    						<div class="col">
+      							<p class="h3">${response[keys[i]]}</p>
+    						</div>
+    					
+    						<div class="col">
+      							<p class="h3">${keys[i]}</p>
+    						</div>
+  						</div>
+					</div>
+					`
+					);
+				}
+			}
+		});
+	}
+
+	setInterval(() => {
+		getWorkplaces();
+		getCustomers();
+	}, 5 * Math.pow(10, 3));
 
 </script>
 </html>
