--- a/app/Models/templates/operator.html
+++ b/app/Models/templates/operator.html
@@ -48,45 +48,6 @@
     					</div>
   					</div>
 				</div>
-
-				<!-- Template -->
-				<div class="container">
-  					<div class="row">
-    					<div class="col">
-      						<p class="h2">25</p>
-    					</div>
-    					
-    					<div class="col">
-      						<p class="h2">1</p>
-    					</div>
-  					</div>
-				</div>
-
-				<!-- Template -->
-				<div class="container">
-  					<div class="row">
-    					<div class="col">
-      						<p class="h2">26</p>
-    					</div>
-    					
-    					<div class="col">
-      						<p class="h2">2</p>
-    					</div>
-  					</div>
-				</div>
-
-				<div class="container">
-  					<div class="row">
-    					<div class="col">
-      						<p class="h2">5</p>
-    					</div>
-    					
-    					<div class="col">
-      						<p class="h2">3</p>
-    					</div>
-  					</div>
-				</div>
-
 			</div>
 
       <div id="operators-tab" class="container">
@@ -101,8 +62,8 @@
           </div>
 
           <div class="col">
-            <p class="h6">State: {{ state }}</p>
-            <p class="h6">Customer: 46</p>
+            <p class="h6" id="state_info">State: {{ state }}</p>
+            <p class="h6" id="cust_info">Customer: -</p>
           </div>
 
           <div class="col">
@@ -131,21 +92,111 @@
 			url: "{{ url_for('getCustomers') }}",
 			data: {"get": 1},
 			success: function(response) {
+
 				$("#customers").empty()
 
-				for (let i in response.data) {
-					i++;
+				for (let i = 0; i < response.data.length; i++) {
 					$("#customers").append(
-						$("<p/>")
-							.text(i)
-							.addClass("h1")
+					$("<p/>")
+						.text(response.data[i])
+						.addClass("h1")
 					);
 				}
 			}
 		})
 	}
 
-	setInterval(getCustomers, 5 * Math.pow(10, 3));
+	function getOperatorsNumber() {
+		let currentUrl = window.location.href;
+		let operatorsNumber = currentUrl.substring(currentUrl.lastIndexOf('/') + 1);
+		
+		return operatorsNumber;
+	}
+
+	$("#busy-btn").click(function(){
+		let number = getOperatorsNumber();
+		$.ajax({
+			type: "get",
+			url: "{{ url_for('setState') }}",
+			data: {
+				id: number,
+				status: "busy"
+			},
+			success: function() {
+				$("#state_info").text("State: busy").css("color", "#D24B4B");
+			}
+		});
+	})
+
+	$("#free-btn").click(function(){
+		let number = getOperatorsNumber();
+		$.ajax({
+			type: "get",
+			url: "{{ url_for('setState') }}",
+			data: {
+				id: number,
+				status: "free"
+			},
+			success: function() {
+				$("#state_info").text("State: free").css("color", "#588E57");
+			}
+		});
+	})
+
+	function getWorkplaces() {
+		$.ajax({
+			type: "POST",
+			url: "{{ url_for('getWorkplaces') }}",
+			data: {"get": 1},
+			success: function(response) {
+				$("#operators_queue").empty();
+				$("#operators_queue").append(
+					`
+					<div class="container text-center">
+  						<div class="row">
+    						<div class="col">
+      							<p class="h3">Customer</p>
+    						</div>
+    					
+    						<div class="col">
+      							<p class="h3">Operator</p>
+    						</div>
+  						</div>
+					</div>
+					`
+				);
+
+				let keys = Object.keys(response);
+				for (let i = 0; i < keys.length; i++) {
+					$("#operators_queue").append(
+					`
+					<div class="container text-center">
+  						<div class="row">
+    						<div class="col">
+      							<p class="h3">${response[keys[i]]}</p>
+    						</div>
+    					
+    						<div class="col">
+      							<p class="h3">${keys[i]}</p>
+    						</div>
+  						</div>
+					</div>
+					`
+					);
+
+					if (String(keys[i]) == String(getOperatorsNumber())) {
+						$("#cust_info").text(`Customer: ${response[keys[i]]}`);
+						return;
+					}
+				}
+			}
+		});
+	}
+
+	setInterval(() => {
+		getWorkplaces();
+		getCustomers();
+	}, 2 * Math.pow(10, 3));
 
 </script>
 
