--- a/app/Models/templates/operator.html
+++ b/app/Models/templates/operator.html
@@ -70,11 +70,11 @@
             <p class="h5">Change state:</p>
 
             <button type="button" id="free-btn">
-              <p class="h6">Free</p>
+              Free
             </button>
 
             <button type="button" id="busy-btn">
-              <p class="h6">Busy</p>
+				Busy
             </button>
           </div>
         </div>
@@ -85,119 +85,7 @@
 
 </body>
 
-<script>
-	function getCustomers() {
-		$.ajax({
-			type: "POST",
-			url: "{{ url_for('getCustomers') }}",
-			data: {"get": 1},
-			success: function(response) {
-
-				$("#customers").empty()
-
-				for (let i = 0; i < response.data.length; i++) {
-					$("#customers").append(
-					$("<p/>")
-						.text(response.data[i])
-						.addClass("h1")
-					);
-				}
-			}
-		})
-	}
-
-	function getOperatorsNumber() {
-		let currentUrl = window.location.href;
-		let operatorsNumber = currentUrl.substring(currentUrl.lastIndexOf('/') + 1);
-		
-		return operatorsNumber;
-	}
-
-	$("#busy-btn").click(function(){
-		let number = getOperatorsNumber();
-		$.ajax({
-			type: "get",
-			url: "{{ url_for('setState') }}",
-			data: {
-				id: number,
-				status: "busy"
-			},
-			success: function() {
-				$("#state_info").text("State: busy").css("color", "#D24B4B");
-			}
-		});
-	})
-
-	$("#free-btn").click(function(){
-		let number = getOperatorsNumber();
-		$.ajax({
-			type: "get",
-			url: "{{ url_for('setState') }}",
-			data: {
-				id: number,
-				status: "free"
-			},
-			success: function() {
-				$("#state_info").text("State: free").css("color", "#588E57");
-			}
-		});
-	})
-
-	function getWorkplaces() {
-		$.ajax({
-			type: "POST",
-			url: "{{ url_for('getWorkplaces') }}",
-			data: {"get": 1},
-			success: function(response) {
-				$("#operators_queue").empty();
-				$("#operators_queue").append(
-					`
-					<div class="container text-center">
-  						<div class="row">
-    						<div class="col">
-      							<p class="h3">Customer</p>
-    						</div>
-    					
-    						<div class="col">
-      							<p class="h3">Operator</p>
-    						</div>
-  						</div>
-					</div>
-					`
-				);
-
-				let keys = Object.keys(response);
-				for (let i = 0; i < keys.length; i++) {
-					$("#operators_queue").append(
-					`
-					<div class="container text-center">
-  						<div class="row">
-    						<div class="col">
-      							<p class="h3">${response[keys[i]]}</p>
-    						</div>
-    					
-    						<div class="col">
-      							<p class="h3">${keys[i]}</p>
-    						</div>
-  						</div>
-					</div>
-					`
-					);
-
-					if (String(keys[i]) == String(getOperatorsNumber())) {
-						$("#cust_info").text(`Customer: ${response[keys[i]]}`);
-						return;
-					}
-				}
-			}
-		});
-	}
-
-	setInterval(() => {
-		getWorkplaces();
-		getCustomers();
-	}, 2 * Math.pow(10, 3));
-
+<script type="module" src="{{url_for('static', filename='operatorScripts.js')}}">
 </script>
 
 </html>
