--- a/app/Models/templates/monitor.html
+++ b/app/Models/templates/monitor.html
@@ -54,76 +54,6 @@
 
 </body>
 
-<script>
-	function getCustomers() {
-		$.ajax({
-			type: "POST",
-			url: "{{ url_for('getCustomers') }}",
-			data: {"get": 1},
-			success: function(response) {
-
-				$("#customers").empty()
-
-				for (let i = 0; i < response.data.length; i++) {
-					$("#customers").append(
-						$("<p/>")
-							.text(response.data[i])
-							.addClass("h1")
-					);
-				}
-			}
-		})
-	}
-
-	function getWorkplaces() {
-		$.ajax({
-			type: "POST",
-			url: "{{ url_for('getWorkplaces') }}",
-			data: {"get": 1},
-			success: function(response) {
-				$("#operators_queue").empty();
-				$("#operators_queue").append(
-					`
-					<div class="container text-center">
-  						<div class="row">
-    						<div class="col">
-      							<p class="h3">Customer</p>
-    						</div>
-    					
-    						<div class="col">
-      							<p class="h3">Operator</p>
-    						</div>
-  						</div>
-					</div>
-					`
-				);
-
-				let keys = Object.keys(response);
-				for (let i = 0; i < keys.length; i++) {
-					$("#operators_queue").append(
-					`
-					<div class="container text-center">
-  						<div class="row">
-    						<div class="col">
-      							<p class="h3">${response[keys[i]]}</p>
-    						</div>
-    					
-    						<div class="col">
-      							<p class="h3">${keys[i]}</p>
-    						</div>
-  						</div>
-					</div>
-					`
-					);
-				}
-			}
-		});
-	}
-
-	setInterval(() => {
-		getWorkplaces();
-		getCustomers();
-	}, 5 * Math.pow(10, 3));
-
+<script type="module" src="{{url_for('static', filename='monitorScripts.js')}}">
 </script>
 </html>
